fix(radio-toggle): high contrast on chromium edge (#196)

--- a/projects/ng-aquila/src/radio-toggle/radio-toggle-button.component.scss
+++ b/projects/ng-aquila/src/radio-toggle/radio-toggle-button.component.scss
@@ -60,11 +60,6 @@ $border-radius: nx-border-radius(s);
     .nx-radio-toggle__label {
       cursor: not-allowed;
     }
-
-    @media screen and (-ms-high-contrast: active) {
-      border-color: GrayText;
-      color: GrayText;
-    }
   }
 }
 
@@ -74,11 +69,6 @@ $border-radius: nx-border-radius(s);
   @include var(color, toggle-button-selected-text-color);
   cursor: default;
 
-  @media screen and (-ms-high-contrast: active) {
-    background-color: highlight;
-    border-color: buttonText;
-  }
-
   .nx-toggle-button__mobile-check {
     @include media-breakpoint-down("small") {
       display: inline-block;
@@ -87,11 +77,6 @@ $border-radius: nx-border-radius(s);
 
   .nx-radio-toggle__label {
     cursor: default;
-
-    @media screen and (-ms-high-contrast: active) {
-      -ms-high-contrast-adjust: none;
-      color: highlightText;
-    }
   }
 }
 
@@ -224,21 +209,10 @@ $bordered-without-right: $border-width 0 $border-width $border-width;
     }
   }
 
-
   &:hover {
     @include var(background-color, toggle-button-hover-background-color);
     @include var(border-color, toggle-button-hover-border-color);
     @include var(color, toggle-button-hover-text-color);
-  }
-
-  @media screen and (-ms-high-contrast: active) {
-    border-color: buttonText;
-    background-color: buttonFace;
-    color: buttonText;
-
-    .nx-radio-toggle__label {
-      -ms-high-contrast-adjust: none;
-    }
   }
 }
 
@@ -299,4 +273,104 @@ $bordered-without-right: $border-width 0 $border-width $border-width;
 .nx-radio-toggle__input.cdk-keyboard-focused + .nx-radio-toggle__label-container {
   @include focus-style;
   z-index: 1; // otherwise the right box shadown is not shown
+}
+
+
+// HIGH CONTRAST
+@mixin hc-unchecked {
+  background-color: buttonFace;
+  border-color: buttonText;
+  color: buttonText;
+}
+
+// also used for :disabled:checked
+@mixin hc-checked {
+  background-color: highlight;
+  border-color: buttonText;
+  color: highlightText;
+}
+
+@mixin hc-disabled-unchecked {
+  background-color: buttonFace;
+  border-color: GrayText;
+  color: GrayText;
+}
+
+@media screen and (-ms-high-contrast: active) {
+  :host {
+    forced-color-adjust: none;
+
+    &.has-error {
+      .nx-radio-toggle__input:checked + .nx-radio-toggle__label-container {
+        @include hc-checked();
+      }
+
+      .nx-radio-toggle__label-container {
+        border-color: buttonText;
+        color: buttonText;
+      }
+
+      &:hover {
+        .nx-radio-toggle__label-container {
+          color: buttonText;
+        }
+      }
+    }
+  }
+
+  .nx-radio-toggle__input {
+    &:active + .nx-radio-toggle__label-container {
+      @include hc-unchecked();
+    }
+
+    &:checked + .nx-radio-toggle__label-container {
+      @include hc-checked();
+  
+      .nx-radio-toggle__label {
+        -ms-high-contrast-adjust: none;
+        color: highlightText;
+      }
+    }
+
+    &:checked:disabled + .nx-radio-toggle__label-container {
+      @include hc-checked();
+    }
+
+    &:disabled + .nx-radio-toggle__label-container {
+      @include hc-disabled-unchecked();
+    }
+  }
+
+  .nx-radio-toggle__label-container,
+  .nx-radio-toggle__label-container:hover {
+    @include hc-unchecked();
+
+    .nx-radio-toggle__label {
+      -ms-high-contrast-adjust: none;
+    }
+  }
+
+  // negative version
+  :host-context(.nx-radio-toggle--negative) {
+    .nx-radio-toggle__input {
+      &:focus + .nx-radio-toggle__label-container,
+      &:active + .nx-radio-toggle__label-container {
+        @include hc-unchecked();
+      }
+
+      &:checked + .nx-radio-toggle__label-container,
+      &:disabled:checked + .nx-radio-toggle__label-container {
+        @include hc-checked();
+      }
+
+      &:disabled + .nx-radio-toggle__label-container {
+        @include hc-disabled-unchecked();
+      }
+    }
+
+    .nx-radio-toggle__label-container,
+    .nx-radio-toggle__label-container:hover {
+      @include hc-unchecked();
+    }
+  }
 }
